force-app/main/default/objects/NoteOrAttachment__c/NoteOrAttachment__c.object-meta.xml
<CustomObject>
    <description>This object masks standard Attachments &amp; Private Notes in the custom object.</description>
    <label>Note Or Attachment</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes Or Attachments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>