force-app/main/default/objects/NoteOrAttachment__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <description>Stores standard attachment id</description>
    <label>Attachment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>