force-app/main/default/objects/NoteOrAttachment__c/fields/Attachment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Attachment_DateTime__c</fullName>
    <description>Used for CFM API (Mobile App), stores date time provided by Feedback2Go App</description>
    <label>Attachment DateTime</label>
    <type>DateTime</type>
</CustomField>