force-app/main/default/objects/NoteOrAttachment__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <description>This field will return the pdf attachment id from the attachments</description>
    <formula>IF(NOT(ISBLANK(PDF_Attachment__c)), PDF_Attachment__c,Attachment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Id</label>
    <type>Text</type>
</CustomField>