force-app/main/default/objects/NoteOrAttachment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Notes &amp; Attachments</relationshipLabel>
    <relationshipName>NoteOrAttachments</relationshipName>
    <type>Lookup</type>
</CustomField>