force-app/main/default/objects/NoteOrAttachment__c/fields/CaseArticle__c.field-meta.xml
<CustomField>
    <fullName>CaseArticle__c</fullName>
    <label>CaseArticle</label>
    <length>18</length>
    <type>Text</type>
</CustomField>