force-app/main/default/objects/NoteOrAttachment__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>