force-app/main/default/objects/NoteOrAttachment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signed Response</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Unsigned Response</fullName>
            </value>
            <value>
                <fullName>Enclosures</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>