force-app/main/default/objects/NoteOrAttachment__c/fields/Conga_Response_PDF_Generated__c.field-meta.xml
<CustomField>
    <fullName>Conga_Response_PDF_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for code purpose to track if PDF is generated for the current Response WordML document.</description>
    <inlineHelpText>This field is used for code purpose to track if PDF is generated for the current Response WordML document.</inlineHelpText>
    <label>Conga Response PDF Generated</label>
    <type>Checkbox</type>
</CustomField>