force-app/main/default/objects/NoteOrAttachment__c/fields/Desktop_Editing__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Response marked for editing in desktop</description>
    <inlineHelpText>Response marked for editing in desktop</inlineHelpText>
    <label>Mark For Desktop Editing</label>
    <type>Checkbox</type>
</CustomField>