force-app/main/default/objects/NoteOrAttachment__c/fields/DFSIAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>DFSIAttachmentId__c</fullName>
    <description>Attachment Id from DFSI</description>
    <label>DFSIAttachmentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>