force-app/main/default/objects/NoteOrAttachment__c/fields/Is_Image__c.field-meta.xml
<CustomField>
    <fullName>Is_Image__c</fullName>
    <formula>OR(ContentType__c = &quot;image/png&quot;, ContentType__c = &quot;image/jpeg&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Image</label>
    <type>Checkbox</type>
</CustomField>