force-app/main/default/objects/NoteOrAttachment__c/fields/Is_Shared_S2S__c.field-meta.xml
<CustomField>
    <fullName>Is_Shared_S2S__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if custom attachment record is shared via S2S</description>
    <label>Is Shared S2S</label>
    <type>Checkbox</type>
</CustomField>