force-app/main/default/objects/NoteOrAttachment__c/fields/IsMinCorroCaseNote__c.field-meta.xml
<CustomField>
    <fullName>IsMinCorroCaseNote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Note is associated to a MinCorro case</description>
    <label>IsMinCorroCaseNote</label>
    <type>Checkbox</type>
</CustomField>