force-app/main/default/objects/NoteOrAttachment__c/fields/IsMinCorroRelated__c.field-meta.xml
<CustomField>
    <fullName>IsMinCorroRelated__c</fullName>
    <description>Determines whether associated case is Min Corro. Persisted in IsMinCorroCaseNote for use in Sharing rules to Serco</description>
    <formula>Case__r.IsMinCorroCase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMinCorroRelated</label>
    <type>Checkbox</type>
</CustomField>