force-app/main/default/objects/NoteOrAttachment__c/fields/IsOfficeOfSecNote__c.field-meta.xml
<CustomField>
    <fullName>IsOfficeOfSecNote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in sharing rules to determine sharing access to Office of Sec Users</description>
    <label>IsOfficeOfSecNote</label>
    <type>Checkbox</type>
</CustomField>