force-app/main/default/objects/NoteOrAttachment__c/fields/Original_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Original_Attachment__c</fullName>
    <formula>IF( $Profile.Name == &#39;TfNSW Operator Portal User&#39;,
	IF(RecordType.Name == &quot;Attachment&quot; &amp;&amp; Is_Image__c , HYPERLINK(&quot;/operatorportal/servlet/servlet.FileDownload?file=&quot; + Attachment__c,&quot;View&quot;),&quot;&quot;),
	IF(RecordType.Name == &quot;Attachment&quot; &amp;&amp; Is_Image__c , HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; + Attachment__c,&quot;View&quot;),&quot;&quot;))</formula>
    <inlineHelpText>Link to the original file.  Available once a file has been converted into an PDF.</inlineHelpText>
    <label>Original Attachment</label>
    <type>Text</type>
</CustomField>