force-app/main/default/objects/NoteOrAttachment__c/fields/PDF_Attachment__c.field-meta.xml
<CustomField>
    <fullName>PDF_Attachment__c</fullName>
    <description>This field will store the Id of the attachment of the type pdf</description>
    <label>PDF Attachment__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>