force-app/main/default/objects/NoteOrAttachment__c/fields/Privacy__c.field-meta.xml
<CustomField>
    <fullName>Privacy__c</fullName>
    <inlineHelpText>This allows user to mark security disposition of the record. Default is &quot;Standard&quot;</inlineHelpText>
    <label>Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>