force-app/main/default/objects/NoteOrAttachment__c/fields/Rejection_Comment__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comment__c</fullName>
    <label>Rejection Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>