force-app/main/default/objects/NoteOrAttachment__c/fields/Requires_Printing__c.field-meta.xml
<CustomField>
    <fullName>Requires_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Printing</label>
    <type>Checkbox</type>
</CustomField>