force-app/main/default/objects/NoteOrAttachment__c/fields/Response_Document_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Response_Document_File_Name__c</fullName>
    <formula>&#39;response_&#39;+LEFT(Text(NOW() + ((1/24)*11)), LEN(TEXT(NOW() + ((1/24)*11))) - 4)</formula>
    <label>Response Document File Name</label>
    <type>Text</type>
</CustomField>