force-app/main/default/objects/NoteOrAttachment__c/fields/Response_PDF__c.field-meta.xml
<CustomField>
    <fullName>Response_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to identify the response PDF generated using WordML document from by Thunderhead.</description>
    <inlineHelpText>Field used to identify the response PDF generated using WordML document from by Thunderhead.</inlineHelpText>
    <label>Response PDF</label>
    <type>Checkbox</type>
</CustomField>