force-app/main/default/objects/NoteOrAttachment__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Printing sequence</description>
    <inlineHelpText>Printing sequence number</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>