force-app/main/default/objects/NoteOrAttachment__c/fields/Shared__c.field-meta.xml
<CustomField>
    <fullName>Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if standard attachment related to custom attachment is shared or not</description>
    <inlineHelpText>Flag indicating if standard attachment related to custom attachment is shared or not</inlineHelpText>
    <label>Shared</label>
    <type>Checkbox</type>
</CustomField>