force-app/main/default/objects/NoteOrAttachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cover Letter</fullName>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Advise Request</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>