force-app/main/default/objects/NoteOrAttachment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>IF( $Profile.Name == &#39;TfNSW Operator Portal User&#39;,IF(RecordType.Name == &quot;Attachment&quot;, HYPERLINK(&quot;/operatorportal/servlet/servlet.FileDownload?file=&quot; + Attachment_Id__c,&quot;View&quot;),&quot;&quot;),IF(RecordType.Name == &quot;Attachment&quot;, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; + Attachment_Id__c,&quot;View&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>