force-app/main/default/objects/NoteOrAttachment__c/recordTypes/Attachment.recordType-meta.xml
<RecordType>
    <fullName>Attachment</fullName>
    <active>true</active>
    <description>USE THIS RECORD TYPE TO CREATE NEW FILE ATTACHMENT</description>
    <label>Attachment</label>
</RecordType>