force-app/main/default/objects/NoteOrAttachment__c/recordTypes/Note.recordType-meta.xml
<RecordType>
    <fullName>Note</fullName>
    <active>true</active>
    <description>USE THIS RECORD TYPE TO CREATE NEW NOTE</description>
    <label>Note</label>
</RecordType>