force-app/main/default/objects/NoteOrAttachment__c/listViews/Business_Integration_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Business_Integration_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Integration</label>
    <queue>Business_Integration</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>