force-app/main/default/objects/NoteOrAttachment__c/listViews/Centre_for_Road_Safety_MC_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Centre_for_Road_Safety_MC_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>TfNSW FSP Centre Road Maritime Safety</label>
    <queue>Centre_for_Road_Safety_MC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>