force-app/main/default/objects/NoteOrAttachment__c/listViews/Concession_Compliance_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Concession_Compliance_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Concession - Compliance</label>
    <queue>Concession_Compliance</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>