force-app/main/default/objects/NoteOrAttachment__c/listViews/Concession_Concessions_and_Schemes_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Concession_Concessions_and_Schemes_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Pending Deletion (contact admin)</label>
    <queue>Concession_Concessions_and_Schemes</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>