force-app/main/default/objects/NoteOrAttachment__c/listViews/Concession_Concessions_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Concession_Concessions_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Concession - Customer Schemes</label>
    <queue>Concession_Concessions</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>