force-app/main/default/objects/NoteOrAttachment__c/listViews/Concession_Replacement_of_TCEC_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Concession_Replacement_of_TCEC_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Pending Deletion (contact admin)</label>
    <queue>Concession_Replacement_of_TCEC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>