force-app/main/default/objects/NoteOrAttachment__c/listViews/Concession_School_Drive_Subsidy_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Concession_School_Drive_Subsidy_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Concession - SDS/PVC</label>
    <queue>Concession_School_Drive_Subsidy</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>