force-app/main/default/objects/NoteOrAttachment__c/listViews/Concession_SSTS_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Concession_SSTS_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Concession - SSTS</label>
    <queue>Concession_SSTS</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>