force-app/main/default/objects/NoteOrAttachment__c/listViews/CRGS_Admin_Ready_for_printing_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>CRGS_Admin_Ready_for_printing_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>CRGS Admin - Ready for printing</label>
    <queue>CRGS_Admin_Ready_for_printing</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>