force-app/main/default/objects/NoteOrAttachment__c/listViews/CRGS_Admins_MC_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>CRGS_Admins_MC_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>CRGS Admin</label>
    <queue>CRGS_Admins_MC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>