force-app/main/default/objects/NoteOrAttachment__c/listViews/ErroneousCases_MC_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>ErroneousCases_MC_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>Erroneous Cases</label>
    <queue>ErroneousCases_MC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>