force-app/main/default/objects/NoteOrAttachment__c/listViews/Finance_MC_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Finance_MC_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>TfNSW Finance &amp; Investment</label>
    <queue>Finance_MC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>