force-app/main/default/objects/NoteOrAttachment__c/listViews/Freight_Regional_Development_MC_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>Freight_Regional_Development_MC_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>TfNSW FSP - Freight</label>
    <queue>Freight_Regional_Development_MC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>