force-app/main/default/objects/NoteOrAttachment__c/listViews/GIS_Admin_RMS_MC_NoteOrAttachment.listView-meta.xml
<ListView>
    <fullName>GIS_Admin_RMS_MC_NoteOrAttachment</fullName>
    <filterScope>Queue</filterScope>
    <label>RMS Corro Triage</label>
    <queue>GIS_Admin_RMS_MC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>